open-router integrated with free models, fallback to chained free models on fail

--- a/server/env.example
+++ b/server/env.example
@@ -1,5 +1,18 @@
-# OpenAI API Configuration
+# AI Service Configuration
+# Choose between OpenAI or OpenRouter
+AI_SERVICE=openrouter
+
+# OpenAI API Configuration (if using OpenAI)
 OPENAI_API_KEY=your_openai_api_key_here
+
+# OpenRouter API Configuration (if using OpenRouter)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_MODEL=openai/gpt-4o-mini
+OPENROUTER_PREFER_FREE=true
+OPENROUTER_MAX_RETRIES=3
+OPENROUTER_RETRY_DELAY=1000
+OPENROUTER_APP_NAME=Postify
+OPENROUTER_SITE_URL=http://localhost:3001
 
 # Rate Limiting Configuration
 RATE_LIMIT_RPM=10
